--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
+    "types": [
+      "reflect-metadata"
+    ],
     "lib": [
       "es2015.promise",
       "dom", 
