--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "downlevelIteration": true,
     "strict": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "jsx": "react"
   }
 }
