--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Source code of Learning TypeScript published by Packt Publishing",
   "main": "index.js",
   "scripts": {
-    "test": "ts-node ./test/01_chapter.test.ts"
+    "test": "ts-node ./test/index.ts"
   },
   "repository": {
     "type": "git",
